train flexmatcher model

--- a/data/data_analysis.ipynb
+++ b/data/data_analysis.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-01-29T12:03:34.498816Z",
-     "start_time": "2025-01-29T12:03:34.181347Z"
+     "end_time": "2025-01-30T19:22:43.217441Z",
+     "start_time": "2025-01-30T19:22:43.067435Z"
     }
    },
    "source": [
@@ -20,33 +20,125 @@
     "for i in range(len(dataframes)):\n",
     "    dataframes[i] = dataframes[i].loc[:, ~dataframes[i].columns.str.contains('^Unnamed')]\n",
     "\n",
-    "dataframes[4].head()\n",
+    "#print all dataframes . colummns.values and name of file\n",
+    "\n",
+    "for i in range(len(dataframes)):\n",
+    "    print(i, dataframes[i].columns.values, '\\n')\n",
+    "\n",
+    "column_names = [\n",
+    "    'name',\n",
+    "    'industry',\n",
+    "    'founded',\n",
+    "    'headquarters',\n",
+    "    'country',\n",
+    "    'website',\n",
+    "    'market_cap',\n",
+    "    'revenue',\n",
+    "    'profit',\n",
+    "    'total_assets',\n",
+    "    'total_liabilities',\n",
+    "    'total_equity',\n",
+    "    'company_type',\n",
+    "    'company_status',\n",
+    "    'ownership_type',\n",
+    "    'registration_number',\n",
+    "    'business_activity',\n",
+    "    'employees',\n",
+    "    'ceo',\n",
+    "    'address',\n",
+    "    'locations',\n",
+    "    'size',\n",
+    "    'investors',\n",
+    "    'rank',\n",
+    "    'last_updated'\n",
+    "]\n",
     "\n"
    ],
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 ['Name' 'Country' 'Sales' 'Profit' 'Assets' 'Market Value' 'file_name'] \n",
+      "\n",
+      "1 ['name' 'headquarters' 'number_of_employees' 'address' 'industry'\n",
+      " 'website' 'market_cap' 'telephone' 'revenue' 'file_name'] \n",
+      "\n",
+      "2 ['name' 'company_number' 'registered_office_address' 'company_status'\n",
+      " 'company_type' 'company_creation_date' 'nature_of_business' 'file_name'] \n",
+      "\n",
+      "3 ['id' 'name' 'world_rank' 'annual_revenue_in_usd'\n",
+      " 'annual_net_income_in_usd' 'annual_results_for_year_ending'\n",
+      " 'total_assets_in_usd' 'total_liabilities_in_usd' 'total_equity_in_usd'\n",
+      " 'headquarters_region_city' 'headquarters_country'\n",
+      " 'headquarters_sub_region' 'headquarters_continent' 'company_business'\n",
+      " 'number_of_employees' 'ceo' 'founders' 'company_website' 'file_name'] \n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "3669025d227545c0"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-30T18:26:01.299158Z",
+     "start_time": "2025-01-30T18:26:01.292415Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "dataframes[14]",
+   "id": "979e6dca35c39480",
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "       name valuation dateJoined        country       city  \\\n",
-       "0  Lacework     $8.3B   1/7/2021  United States   San Jose   \n",
-       "1   Tipalti     $8.3B  10/6/2020  United States  San Mateo   \n",
-       "2    Tempus     $8.1B  3/21/2018  United States    Chicago   \n",
-       "3   Anduril    $8.48B  9/11/2019  United States     Irvine   \n",
-       "4      Bolt     $8.4B  5/29/2018        Estonia    Tallinn   \n",
+       "      ID azienda                                   Area of Activity  \\\n",
+       "0              2  Other activities auxiliary to financial servic...   \n",
+       "1              3                      Specialised design activities   \n",
+       "2              4                    Computer programming activities   \n",
+       "3              5  Construction of residential and non-residentia...   \n",
+       "4              6  Renting and operational leasing of other machi...   \n",
+       "...          ...                                                ...   \n",
+       "1010        1463  Other information technology and computer serv...   \n",
+       "1011        1464  Other professional, scientific and technical a...   \n",
+       "1012        1465  Retail sale via mail order houses or via Internet   \n",
+       "1013        1466                    Manufacture of furniture n.e.c.   \n",
+       "1014        1470   Other business support service activities n.e.c.   \n",
        "\n",
-       "                  industry                                          investors  \\\n",
-       "0            Cybersecurity  Sutter Hill Ventures, Liberty Global Ventures,...   \n",
-       "1                  Fintech               01 Advisors, Zeev Ventures, Group 11   \n",
-       "2                   Health  New Enterprise Associates, T. Rowe Associates,...   \n",
-       "3  Artificial intelligence  Andreessen Horowitz, Founders Fund, Revolution...   \n",
-       "4    Auto & transportation             Didi Chuxing, Diamler, TMT Investments   \n",
+       "              EMTAK Code  NACE Code  \\\n",
+       "0     66199 (EMTAK 2008)      66.19   \n",
+       "1     74101 (EMTAK 2008)      74.10   \n",
+       "2     62011 (EMTAK 2008)      62.01   \n",
+       "3     41201 (EMTAK 2008)      41.20   \n",
+       "4     77399 (EMTAK 2008)      77.39   \n",
+       "...                  ...        ...   \n",
+       "1010  62091 (EMTAK 2008)      62.09   \n",
+       "1011  74901 (EMTAK 2008)      74.90   \n",
+       "1012  47911 (EMTAK 2008)      47.91   \n",
+       "1013  31091 (EMTAK 2008)      31.09   \n",
+       "1014  82991 (EMTAK 2008)      82.99   \n",
        "\n",
-       "   founded              stage totalRaised  \n",
-       "0   2015.0           Series E     $1.907B  \n",
-       "1   2010.0           Series F       $556M  \n",
-       "2   2015.0  Unattributed - II     $1.345B  \n",
-       "3   2017.0           Series E     $2.309B  \n",
-       "4   2013.0           Series F     $1.971B  "
+       "                                                 Source  \n",
+       "0     Electronic submission\\n                       ...  \n",
+       "1     Annual report\\n                               ...  \n",
+       "2     Annual report\\n                               ...  \n",
+       "3     Electronic submission\\n                       ...  \n",
+       "4     Annual report\\n                               ...  \n",
+       "...                                                 ...  \n",
+       "1010  Electronic submission\\n                       ...  \n",
+       "1011  Annual report\\n                               ...  \n",
+       "1012  Annual report\\n                               ...  \n",
+       "1013  Annual report\\n                               ...  \n",
+       "1014  Electronic submission\\n                       ...  \n",
+       "\n",
+       "[1015 rows x 5 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -67,95 +159,114 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>valuation</th>\n",
-       "      <th>dateJoined</th>\n",
-       "      <th>country</th>\n",
-       "      <th>city</th>\n",
-       "      <th>industry</th>\n",
-       "      <th>investors</th>\n",
-       "      <th>founded</th>\n",
-       "      <th>stage</th>\n",
-       "      <th>totalRaised</th>\n",
+       "      <th>ID azienda</th>\n",
+       "      <th>Area of Activity</th>\n",
+       "      <th>EMTAK Code</th>\n",
+       "      <th>NACE Code</th>\n",
+       "      <th>Source</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Lacework</td>\n",
-       "      <td>$8.3B</td>\n",
-       "      <td>1/7/2021</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>San Jose</td>\n",
-       "      <td>Cybersecurity</td>\n",
-       "      <td>Sutter Hill Ventures, Liberty Global Ventures,...</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>Series E</td>\n",
-       "      <td>$1.907B</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Other activities auxiliary to financial servic...</td>\n",
+       "      <td>66199 (EMTAK 2008)</td>\n",
+       "      <td>66.19</td>\n",
+       "      <td>Electronic submission\\n                       ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Tipalti</td>\n",
-       "      <td>$8.3B</td>\n",
-       "      <td>10/6/2020</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>San Mateo</td>\n",
-       "      <td>Fintech</td>\n",
-       "      <td>01 Advisors, Zeev Ventures, Group 11</td>\n",
-       "      <td>2010.0</td>\n",
-       "      <td>Series F</td>\n",
-       "      <td>$556M</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Specialised design activities</td>\n",
+       "      <td>74101 (EMTAK 2008)</td>\n",
+       "      <td>74.10</td>\n",
+       "      <td>Annual report\\n                               ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Tempus</td>\n",
-       "      <td>$8.1B</td>\n",
-       "      <td>3/21/2018</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Chicago</td>\n",
-       "      <td>Health</td>\n",
-       "      <td>New Enterprise Associates, T. Rowe Associates,...</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>Unattributed - II</td>\n",
-       "      <td>$1.345B</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Computer programming activities</td>\n",
+       "      <td>62011 (EMTAK 2008)</td>\n",
+       "      <td>62.01</td>\n",
+       "      <td>Annual report\\n                               ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Anduril</td>\n",
-       "      <td>$8.48B</td>\n",
-       "      <td>9/11/2019</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Irvine</td>\n",
-       "      <td>Artificial intelligence</td>\n",
-       "      <td>Andreessen Horowitz, Founders Fund, Revolution...</td>\n",
-       "      <td>2017.0</td>\n",
-       "      <td>Series E</td>\n",
-       "      <td>$2.309B</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Construction of residential and non-residentia...</td>\n",
+       "      <td>41201 (EMTAK 2008)</td>\n",
+       "      <td>41.20</td>\n",
+       "      <td>Electronic submission\\n                       ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Bolt</td>\n",
-       "      <td>$8.4B</td>\n",
-       "      <td>5/29/2018</td>\n",
-       "      <td>Estonia</td>\n",
-       "      <td>Tallinn</td>\n",
-       "      <td>Auto &amp; transportation</td>\n",
-       "      <td>Didi Chuxing, Diamler, TMT Investments</td>\n",
-       "      <td>2013.0</td>\n",
-       "      <td>Series F</td>\n",
-       "      <td>$1.971B</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Renting and operational leasing of other machi...</td>\n",
+       "      <td>77399 (EMTAK 2008)</td>\n",
+       "      <td>77.39</td>\n",
+       "      <td>Annual report\\n                               ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1010</th>\n",
+       "      <td>1463</td>\n",
+       "      <td>Other information technology and computer serv...</td>\n",
+       "      <td>62091 (EMTAK 2008)</td>\n",
+       "      <td>62.09</td>\n",
+       "      <td>Electronic submission\\n                       ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1011</th>\n",
+       "      <td>1464</td>\n",
+       "      <td>Other professional, scientific and technical a...</td>\n",
+       "      <td>74901 (EMTAK 2008)</td>\n",
+       "      <td>74.90</td>\n",
+       "      <td>Annual report\\n                               ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1012</th>\n",
+       "      <td>1465</td>\n",
+       "      <td>Retail sale via mail order houses or via Internet</td>\n",
+       "      <td>47911 (EMTAK 2008)</td>\n",
+       "      <td>47.91</td>\n",
+       "      <td>Annual report\\n                               ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1013</th>\n",
+       "      <td>1466</td>\n",
+       "      <td>Manufacture of furniture n.e.c.</td>\n",
+       "      <td>31091 (EMTAK 2008)</td>\n",
+       "      <td>31.09</td>\n",
+       "      <td>Annual report\\n                               ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014</th>\n",
+       "      <td>1470</td>\n",
+       "      <td>Other business support service activities n.e.c.</td>\n",
+       "      <td>82991 (EMTAK 2008)</td>\n",
+       "      <td>82.99</td>\n",
+       "      <td>Electronic submission\\n                       ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1015 rows × 5 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 15
   }
  ],
  "metadata": {
