--- a/data/data_analysis.ipynb
+++ b/data/data_analysis.ipynb
@@ -6,12 +6,11 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-01-30T19:22:43.217441Z",
-     "start_time": "2025-01-30T19:22:43.067435Z"
+     "end_time": "2025-02-02T15:59:13.319051Z",
+     "start_time": "2025-02-02T15:59:12.653755Z"
     }
    },
    "source": [
-    "import pandas as pd\n",
     "import extractor\n",
     "\n",
     "dataframes = extractor.extract_data('../data/train')\n",
@@ -25,33 +24,30 @@
     "for i in range(len(dataframes)):\n",
     "    print(i, dataframes[i].columns.values, '\\n')\n",
     "\n",
-    "column_names = [\n",
-    "    'name',\n",
-    "    'industry',\n",
-    "    'founded',\n",
-    "    'headquarters',\n",
-    "    'country',\n",
-    "    'website',\n",
-    "    'market_cap',\n",
-    "    'revenue',\n",
-    "    'profit',\n",
-    "    'total_assets',\n",
-    "    'total_liabilities',\n",
-    "    'total_equity',\n",
-    "    'company_type',\n",
-    "    'company_status',\n",
-    "    'ownership_type',\n",
-    "    'registration_number',\n",
-    "    'business_activity',\n",
-    "    'employees',\n",
-    "    'ceo',\n",
-    "    'address',\n",
-    "    'locations',\n",
-    "    'size',\n",
-    "    'investors',\n",
-    "    'rank',\n",
-    "    'last_updated'\n",
+    "schema_mediato = [\n",
+    "    'company_name',  # Nome della compagnia\n",
+    "    'company_address',  # Indirizzo\n",
+    "    'company_industry',  # Settore industriale\n",
+    "    'company_country',  # Paese\n",
+    "    'company_market_cap',  # Capitalizzazione di mercato\n",
+    "    'company_revenue',  # Ricavi\n",
+    "    'company_employees',  # Numero di dipendenti\n",
+    "    'company_website',  # Sito web\n",
+    "    'company_founded',  # Anno di fondazione\n",
+    "    'company_capital',  # Capitale\n",
+    "    'company_legal_form',  # Forma giuridica\n",
+    "    'company_status',  # Stato dell'azienda\n",
+    "    'company_registration_date',  # Data di registrazione\n",
+    "    'company_type',  # Tipo di azienda\n",
+    "    'company_nace_code',  # Codice NAC\n",
+    "    'company_number',  # Numero di azienda\n",
+    "    'company_headquarters',  # Sede centrale\n",
+    "    'company_valuation',  # Valutazione dell'azienda\n",
+    "    'company_partners',  # Partner aziendali\n",
+    "    'company_representatives',  # Rappresentanti aziendali\n",
+    "    'company_investors'  # Investitori\n",
     "]\n",
+    "\n",
     "\n"
    ],
    "outputs": [
@@ -59,214 +55,102 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 ['Name' 'Country' 'Sales' 'Profit' 'Assets' 'Market Value' 'file_name'] \n",
+      "0 ['id' 'name' 'code' 'legal form' 'status' 'registration date' 'capital'\n",
+      " 'address' 'area of activity' 'emtak code' 'nace code' 'partners'\n",
+      " 'partner_participations' 'partner_contributions' 'representatives'\n",
+      " 'representative_roles' 'representative_start_dates' 'deletion date'\n",
+      " 'file_name'] \n",
       "\n",
-      "1 ['name' 'headquarters' 'number_of_employees' 'address' 'industry'\n",
-      " 'website' 'market_cap' 'telephone' 'revenue' 'file_name'] \n",
+      "1 ['id' 'name' 'address' 'nation' 'hhid' 'industry' 'sic_code' 'type'\n",
+      " 'est_of_ownership' 'file_name'] \n",
       "\n",
-      "2 ['name' 'company_number' 'registered_office_address' 'company_status'\n",
+      "2 ['company' 'facebook' 'twitter' 'instagram' 'pinterest' 'file_name'] \n",
+      "\n",
+      "3 ['name' 'company_number' 'registered_office_address' 'company_status'\n",
       " 'company_type' 'company_creation_date' 'nature_of_business' 'file_name'] \n",
       "\n",
-      "3 ['id' 'name' 'world_rank' 'annual_revenue_in_usd'\n",
+      "4 ['name' 'headquarters' 'number_of_employees' 'address' 'industry'\n",
+      " 'website' 'market_cap' 'telephone' 'revenue' 'file_name'] \n",
+      "\n",
+      "5 ['name' 'country' 'sales' 'profit' 'assets' 'market value' 'file_name'] \n",
+      "\n",
+      "6 ['name' 'website' 'locations' 'size' 'industry' 'founded' 'file_name'] \n",
+      "\n",
+      "7 ['name' 'valuation' 'datejoined' 'country' 'city' 'industry' 'investors'\n",
+      " 'founded' 'stage' 'totalraised' 'file_name'] \n",
+      "\n",
+      "8 ['id' 'name' 'rank' 'market_cap' 'country' 'share_price' 'change_1_day'\n",
+      " 'change_1_year' 'categories' 'file_name'] \n",
+      "\n",
+      "9 ['link' 'name' 'headquarters' 'employees' 'ceo' 'market_cap' 'file_name'] \n",
+      "\n",
+      "10 ['name' 'industry' 'sector' 'headquarters' 'founded' 'notes' 'file_name'] \n",
+      "\n",
+      "11 ['id' 'name' 'world_rank' 'annual_revenue_in_usd'\n",
       " 'annual_net_income_in_usd' 'annual_results_for_year_ending'\n",
       " 'total_assets_in_usd' 'total_liabilities_in_usd' 'total_equity_in_usd'\n",
       " 'headquarters_region_city' 'headquarters_country'\n",
       " 'headquarters_sub_region' 'headquarters_continent' 'company_business'\n",
       " 'number_of_employees' 'ceo' 'founders' 'company_website' 'file_name'] \n",
+      "\n",
+      "12 ['link' 'name' 'country' 'industry' 'revenue' 'employees' 'founded'\n",
+      " 'file_name'] \n",
+      "\n",
+      "13 ['rank' 'brand name' 'category' 'main market' '2010 rank' 'file_name'] \n",
+      "\n",
+      "14 ['name' 'industry' 'headquarter' 'ownership' 'foundation year' 'file_name'] \n",
+      "\n",
+      "15 ['index' 'url' 'name' 'trade name' 'address name' 'postalcode' 'city'\n",
+      " 'state' 'country' 'location type' 'file_name'] \n",
       "\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-03T12:19:59.114155Z",
+     "start_time": "2025-02-03T12:19:59.032142Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import extractor\n",
+    "\n",
+    "#extract all files in data/train\n",
+    "dataframes = extractor.extract_data('../data/train')\n",
+    "\n",
+    "#print the number of rows of each dataframe\n",
+    "for i in range(len(dataframes)):\n",
+    "    print(i, dataframes[i].shape[0])\n",
+    "\n"
+   ],
+   "id": "93162f7e3af401b5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total dataframes processed successfully: 5\n",
+      "0 7000\n",
+      "1 5336\n",
+      "2 1469\n",
+      "3 1185\n",
+      "4 667\n"
+     ]
+    }
+   ],
+   "execution_count": 9
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": "",
    "id": "3669025d227545c0"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-30T18:26:01.299158Z",
-     "start_time": "2025-01-30T18:26:01.292415Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "dataframes[14]",
-   "id": "979e6dca35c39480",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "      ID azienda                                   Area of Activity  \\\n",
-       "0              2  Other activities auxiliary to financial servic...   \n",
-       "1              3                      Specialised design activities   \n",
-       "2              4                    Computer programming activities   \n",
-       "3              5  Construction of residential and non-residentia...   \n",
-       "4              6  Renting and operational leasing of other machi...   \n",
-       "...          ...                                                ...   \n",
-       "1010        1463  Other information technology and computer serv...   \n",
-       "1011        1464  Other professional, scientific and technical a...   \n",
-       "1012        1465  Retail sale via mail order houses or via Internet   \n",
-       "1013        1466                    Manufacture of furniture n.e.c.   \n",
-       "1014        1470   Other business support service activities n.e.c.   \n",
-       "\n",
-       "              EMTAK Code  NACE Code  \\\n",
-       "0     66199 (EMTAK 2008)      66.19   \n",
-       "1     74101 (EMTAK 2008)      74.10   \n",
-       "2     62011 (EMTAK 2008)      62.01   \n",
-       "3     41201 (EMTAK 2008)      41.20   \n",
-       "4     77399 (EMTAK 2008)      77.39   \n",
-       "...                  ...        ...   \n",
-       "1010  62091 (EMTAK 2008)      62.09   \n",
-       "1011  74901 (EMTAK 2008)      74.90   \n",
-       "1012  47911 (EMTAK 2008)      47.91   \n",
-       "1013  31091 (EMTAK 2008)      31.09   \n",
-       "1014  82991 (EMTAK 2008)      82.99   \n",
-       "\n",
-       "                                                 Source  \n",
-       "0     Electronic submission\\n                       ...  \n",
-       "1     Annual report\\n                               ...  \n",
-       "2     Annual report\\n                               ...  \n",
-       "3     Electronic submission\\n                       ...  \n",
-       "4     Annual report\\n                               ...  \n",
-       "...                                                 ...  \n",
-       "1010  Electronic submission\\n                       ...  \n",
-       "1011  Annual report\\n                               ...  \n",
-       "1012  Annual report\\n                               ...  \n",
-       "1013  Annual report\\n                               ...  \n",
-       "1014  Electronic submission\\n                       ...  \n",
-       "\n",
-       "[1015 rows x 5 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID azienda</th>\n",
-       "      <th>Area of Activity</th>\n",
-       "      <th>EMTAK Code</th>\n",
-       "      <th>NACE Code</th>\n",
-       "      <th>Source</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Other activities auxiliary to financial servic...</td>\n",
-       "      <td>66199 (EMTAK 2008)</td>\n",
-       "      <td>66.19</td>\n",
-       "      <td>Electronic submission\\n                       ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Specialised design activities</td>\n",
-       "      <td>74101 (EMTAK 2008)</td>\n",
-       "      <td>74.10</td>\n",
-       "      <td>Annual report\\n                               ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Computer programming activities</td>\n",
-       "      <td>62011 (EMTAK 2008)</td>\n",
-       "      <td>62.01</td>\n",
-       "      <td>Annual report\\n                               ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Construction of residential and non-residentia...</td>\n",
-       "      <td>41201 (EMTAK 2008)</td>\n",
-       "      <td>41.20</td>\n",
-       "      <td>Electronic submission\\n                       ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Renting and operational leasing of other machi...</td>\n",
-       "      <td>77399 (EMTAK 2008)</td>\n",
-       "      <td>77.39</td>\n",
-       "      <td>Annual report\\n                               ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1010</th>\n",
-       "      <td>1463</td>\n",
-       "      <td>Other information technology and computer serv...</td>\n",
-       "      <td>62091 (EMTAK 2008)</td>\n",
-       "      <td>62.09</td>\n",
-       "      <td>Electronic submission\\n                       ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1011</th>\n",
-       "      <td>1464</td>\n",
-       "      <td>Other professional, scientific and technical a...</td>\n",
-       "      <td>74901 (EMTAK 2008)</td>\n",
-       "      <td>74.90</td>\n",
-       "      <td>Annual report\\n                               ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1012</th>\n",
-       "      <td>1465</td>\n",
-       "      <td>Retail sale via mail order houses or via Internet</td>\n",
-       "      <td>47911 (EMTAK 2008)</td>\n",
-       "      <td>47.91</td>\n",
-       "      <td>Annual report\\n                               ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1013</th>\n",
-       "      <td>1466</td>\n",
-       "      <td>Manufacture of furniture n.e.c.</td>\n",
-       "      <td>31091 (EMTAK 2008)</td>\n",
-       "      <td>31.09</td>\n",
-       "      <td>Annual report\\n                               ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1014</th>\n",
-       "      <td>1470</td>\n",
-       "      <td>Other business support service activities n.e.c.</td>\n",
-       "      <td>82991 (EMTAK 2008)</td>\n",
-       "      <td>82.99</td>\n",
-       "      <td>Electronic submission\\n                       ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1015 rows × 5 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 15
   }
  ],
  "metadata": {
