--- a/data/data_analysis.ipynb
+++ b/data/data_analysis.ipynb
@@ -118,8 +118,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-03T12:19:59.114155Z",
-     "start_time": "2025-02-03T12:19:59.032142Z"
+     "end_time": "2025-02-12T17:36:09.146290Z",
+     "start_time": "2025-02-12T17:36:08.823140Z"
     }
    },
    "cell_type": "code",
@@ -129,12 +129,17 @@
     "import extractor\n",
     "\n",
     "#extract all files in data/train\n",
-    "dataframes = extractor.extract_data('../data/train')\n",
+    "dataframes = extractor.extract_data('../data/test')\n",
     "\n",
-    "#print the number of rows of each dataframe\n",
+    "\n",
+    "\n",
+    "#print the dataframe with name valueToday_dataset\n",
+    "\n",
     "for i in range(len(dataframes)):\n",
-    "    print(i, dataframes[i].shape[0])\n",
-    "\n"
+    "    if dataframes[i]['file_name'][0] == 'valueToday_dataset':\n",
+    "        d=dataframes[i]\n",
+    "\n",
+    "d.head(5)\n"
    ],
    "id": "93162f7e3af401b5",
    "outputs": [
@@ -142,13 +147,221 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total dataframes processed successfully: 5\n",
-      "0 7000\n",
-      "1 5336\n",
-      "2 1469\n",
-      "3 1185\n",
-      "4 667\n"
+      "Total dataframes processed successfully: 10\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "                                                name world_rank  \\\n",
+       "0                                              Apple          1   \n",
+       "1  Taiwan Semiconductor Manufacturing Company (tsmc)         10   \n",
+       "2                                 Nvidia Corporation          9   \n",
+       "3                                 Berkshire Hathaway          8   \n",
+       "4                                     Meta Platforms          7   \n",
+       "\n",
+       "  annual_revenue_in_usd annual_net_income_in_usd  \\\n",
+       "0   394,330 Million USD       99,803 Million USD   \n",
+       "1    55,306 Million USD       20,783 Million USD   \n",
+       "2    26,914 Million USD        9,752 Million USD   \n",
+       "3   354,640 Million USD       89,795 Million USD   \n",
+       "4   117,930 Million USD       39,370 Million USD   \n",
+       "\n",
+       "  annual_results_for_year_ending  total_assets_in_usd  \\\n",
+       "0                       Sep-2022  352,760 Million USD   \n",
+       "1                       Dec-2021  129,800 Million USD   \n",
+       "2      For Year Ending  JAN-2022   44,187 Million USD   \n",
+       "3       For Year ending Dec-2021  956,780 Million USD   \n",
+       "4                       Dec-2021  165,990 Million USD   \n",
+       "\n",
+       "  total_liabilities_in_usd  total_equity_in_usd headquarters_region_city  \\\n",
+       "0      302,080 Million USD   50,672 Million USD               California   \n",
+       "1       54,253 Million USD   75,543 Million USD                  Hsinchu   \n",
+       "2       17,575 Million USD   26,612 Million USD               California   \n",
+       "3      443,850 Million USD  514,930 Million USD                 Nebraska   \n",
+       "4       41,108 Million USD  124,880 Million USD               California   \n",
+       "\n",
+       "  headquarters_country headquarters_sub_region headquarters_continent  \\\n",
+       "0                  USA        Northern America               Americas   \n",
+       "1               Taiwan         South East Asia                   Asia   \n",
+       "2                  USA        Northern America               Americas   \n",
+       "3                  USA        Northern America               Americas   \n",
+       "4                  USA        Northern America               Americas   \n",
+       "\n",
+       "                                    company_business number_of_employees  \\\n",
+       "0  ['Technology', 'Mobiles & Accessories', 'Elect...             154,000   \n",
+       "1  ['Technology', 'Semiconductors', 'Electronics'...              65,152   \n",
+       "2  ['Technology', 'Semiconductors', 'Electronics'...              18,975   \n",
+       "3  ['Financial Services', 'Investments', 'Insuran...             372,000   \n",
+       "4  ['Communication Services', 'Internet or Mobile...              77,805   \n",
+       "\n",
+       "               ceo                                           founders  \\\n",
+       "0         Tim Cook    ['Steve Jobs', 'Steve Wozniak', 'Ronald Wayne']   \n",
+       "1        C. C. Wei                                       Morris Chang   \n",
+       "2     Jensen Huang  ['Jensen Huang', 'Chris Malachowsky', 'Curtis ...   \n",
+       "3   Warren Buffett                                       Oliver Chace   \n",
+       "4  Mark Zuckerberg  ['Mark Zuckerberg', 'Andrew McCollum', 'Eduard...   \n",
+       "\n",
+       "                      company_website           file_name  \n",
+       "0              https://www.apple.com/  valueToday_dataset  \n",
+       "1               https://www.tsmc.com/  valueToday_dataset  \n",
+       "2              http://www.nvidia.com/  valueToday_dataset  \n",
+       "3  https://www.berkshirehathaway.com/  valueToday_dataset  \n",
+       "4           https://www.facebook.com/  valueToday_dataset  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>world_rank</th>\n",
+       "      <th>annual_revenue_in_usd</th>\n",
+       "      <th>annual_net_income_in_usd</th>\n",
+       "      <th>annual_results_for_year_ending</th>\n",
+       "      <th>total_assets_in_usd</th>\n",
+       "      <th>total_liabilities_in_usd</th>\n",
+       "      <th>total_equity_in_usd</th>\n",
+       "      <th>headquarters_region_city</th>\n",
+       "      <th>headquarters_country</th>\n",
+       "      <th>headquarters_sub_region</th>\n",
+       "      <th>headquarters_continent</th>\n",
+       "      <th>company_business</th>\n",
+       "      <th>number_of_employees</th>\n",
+       "      <th>ceo</th>\n",
+       "      <th>founders</th>\n",
+       "      <th>company_website</th>\n",
+       "      <th>file_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>1</td>\n",
+       "      <td>394,330 Million USD</td>\n",
+       "      <td>99,803 Million USD</td>\n",
+       "      <td>Sep-2022</td>\n",
+       "      <td>352,760 Million USD</td>\n",
+       "      <td>302,080 Million USD</td>\n",
+       "      <td>50,672 Million USD</td>\n",
+       "      <td>California</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Northern America</td>\n",
+       "      <td>Americas</td>\n",
+       "      <td>['Technology', 'Mobiles &amp; Accessories', 'Elect...</td>\n",
+       "      <td>154,000</td>\n",
+       "      <td>Tim Cook</td>\n",
+       "      <td>['Steve Jobs', 'Steve Wozniak', 'Ronald Wayne']</td>\n",
+       "      <td>https://www.apple.com/</td>\n",
+       "      <td>valueToday_dataset</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Taiwan Semiconductor Manufacturing Company (tsmc)</td>\n",
+       "      <td>10</td>\n",
+       "      <td>55,306 Million USD</td>\n",
+       "      <td>20,783 Million USD</td>\n",
+       "      <td>Dec-2021</td>\n",
+       "      <td>129,800 Million USD</td>\n",
+       "      <td>54,253 Million USD</td>\n",
+       "      <td>75,543 Million USD</td>\n",
+       "      <td>Hsinchu</td>\n",
+       "      <td>Taiwan</td>\n",
+       "      <td>South East Asia</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>['Technology', 'Semiconductors', 'Electronics'...</td>\n",
+       "      <td>65,152</td>\n",
+       "      <td>C. C. Wei</td>\n",
+       "      <td>Morris Chang</td>\n",
+       "      <td>https://www.tsmc.com/</td>\n",
+       "      <td>valueToday_dataset</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Nvidia Corporation</td>\n",
+       "      <td>9</td>\n",
+       "      <td>26,914 Million USD</td>\n",
+       "      <td>9,752 Million USD</td>\n",
+       "      <td>For Year Ending  JAN-2022</td>\n",
+       "      <td>44,187 Million USD</td>\n",
+       "      <td>17,575 Million USD</td>\n",
+       "      <td>26,612 Million USD</td>\n",
+       "      <td>California</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Northern America</td>\n",
+       "      <td>Americas</td>\n",
+       "      <td>['Technology', 'Semiconductors', 'Electronics'...</td>\n",
+       "      <td>18,975</td>\n",
+       "      <td>Jensen Huang</td>\n",
+       "      <td>['Jensen Huang', 'Chris Malachowsky', 'Curtis ...</td>\n",
+       "      <td>http://www.nvidia.com/</td>\n",
+       "      <td>valueToday_dataset</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Berkshire Hathaway</td>\n",
+       "      <td>8</td>\n",
+       "      <td>354,640 Million USD</td>\n",
+       "      <td>89,795 Million USD</td>\n",
+       "      <td>For Year ending Dec-2021</td>\n",
+       "      <td>956,780 Million USD</td>\n",
+       "      <td>443,850 Million USD</td>\n",
+       "      <td>514,930 Million USD</td>\n",
+       "      <td>Nebraska</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Northern America</td>\n",
+       "      <td>Americas</td>\n",
+       "      <td>['Financial Services', 'Investments', 'Insuran...</td>\n",
+       "      <td>372,000</td>\n",
+       "      <td>Warren Buffett</td>\n",
+       "      <td>Oliver Chace</td>\n",
+       "      <td>https://www.berkshirehathaway.com/</td>\n",
+       "      <td>valueToday_dataset</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Meta Platforms</td>\n",
+       "      <td>7</td>\n",
+       "      <td>117,930 Million USD</td>\n",
+       "      <td>39,370 Million USD</td>\n",
+       "      <td>Dec-2021</td>\n",
+       "      <td>165,990 Million USD</td>\n",
+       "      <td>41,108 Million USD</td>\n",
+       "      <td>124,880 Million USD</td>\n",
+       "      <td>California</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Northern America</td>\n",
+       "      <td>Americas</td>\n",
+       "      <td>['Communication Services', 'Internet or Mobile...</td>\n",
+       "      <td>77,805</td>\n",
+       "      <td>Mark Zuckerberg</td>\n",
+       "      <td>['Mark Zuckerberg', 'Andrew McCollum', 'Eduard...</td>\n",
+       "      <td>https://www.facebook.com/</td>\n",
+       "      <td>valueToday_dataset</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "execution_count": 9
