Csv for entity resolution

--- a/data/data_analysis.ipynb
+++ b/data/data_analysis.ipynb
@@ -13,8 +13,8 @@
    "source": [
     "import extractor\n",
     "\n",
-    "dataframes = extractor.extract_data('../data/train')\n",
-    "dataframes2= extractor.extract_data('../data/test')\n",
+    "dataframes = extractor.extract_data('schema_alignment/train')\n",
+    "dataframes2= extractor.extract_data('schema_alignment/test')\n",
     "\n",
     "dataframes = dataframes + dataframes2\n",
     "\n",
@@ -129,7 +129,7 @@
     "import extractor\n",
     "\n",
     "#extract all files in data/train\n",
-    "dataframes = extractor.extract_data('../data/test')\n",
+    "dataframes = extractor.extract_data('schema_alignment/test')\n",
     "\n",
     "\n",
     "\n",
