made ditto predition on test data

--- a/data/data_analysis.ipynb
+++ b/data/data_analysis.ipynb
@@ -371,6 +371,65 @@
    "cell_type": "markdown",
    "source": "",
    "id": "3669025d227545c0"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T11:59:54.980814Z",
+     "start_time": "2025-02-19T11:59:54.976855Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import json\n",
+    "import jsonlines\n",
+    "\n",
+    "input_file = 'record_linkage/ditto/train/ditto_input.jsonl'\n",
+    "output_file = '../ditto-master/data/input/ditto_input.jsonl'\n",
+    "\n",
+    "def format_record(record):\n",
+    "    # Crea una stringa formattata per il record\n",
+    "    parts = []\n",
+    "    for key, value in record.items():\n",
+    "        parts.append(f\"COL {key} VAL {value}\")\n",
+    "    return \" \".join(parts)\n",
+    "\n",
+    "with jsonlines.open(input_file, mode='r') as reader, jsonlines.open(output_file, mode='w') as writer:\n",
+    "    for obj in reader:\n",
+    "        # Per ogni riga, crea una lista con i due record formattati\n",
+    "        record1_str = format_record(obj[\"record1\"])\n",
+    "        record2_str = format_record(obj[\"record2\"])\n",
+    "        writer.write([record1_str, record2_str])\n",
+    "\n",
+    "\n"
+   ],
+   "id": "101c088fb66b80f2",
+   "outputs": [],
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "import csv\n",
+    "\n",
+    "input_filename = 'tuo_file.txt'   # Sostituisci con il nome del tuo file di input\n",
+    "output_filename = 'output.csv'      # Il nome del file CSV in output\n",
+    "\n",
+    "with open(input_filename, 'r', encoding='utf-8') as infile, \\\n",
+    "     open(output_filename, 'w', newline='', encoding='utf-8') as outfile:\n",
+    "    csv_writer = csv.writer(outfile)\n",
+    "    # Scrivi l'intestazione, se necessario\n",
+    "    csv_writer.writerow(['left', 'right', 'label', 'score'])\n",
+    "\n",
+    "    for line in infile:\n",
+    "        # Rimuove eventuali spazi o newline e divide la riga sui tab\n",
+    "        row = line.strip().split('\\t')\n",
+    "        csv_writer.writerow(row)\n"
+   ],
+   "id": "99871df3a6f7f441"
   }
  ],
  "metadata": {
